@@ -1,6 +1,8 @@
 June 2010 3.1.0
   - Asterisk voicemail support
   - new hosts module for user accounts to define valid login workstations (replaces inetOrgPerson schema hack) (2951116)
+  - LAM Pro
+   -> custom scripts: new options to hide executed commands and define if output is HTML or plain text
   - fixed bugs:
    -> Asterisk password handling (patch 2979728)
 
